# ramp-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
ramp_ml/: __init__.py  cli.py  dataset.py  eval.py  gating.py  inference.py  io.py  model.py  plotting.py  utils.py
scripts/: run_example.sh
tests/: test_eval.py
